@@ -20,6 +20,7 @@ core 2.1.3 - not released yet
 	* Added: Default link to documentation
 	* Added: Comparison form validators (dateBefore, dateAfter, dateNotAfter, dateTimeNotBefore, dateTimeAfter, equals) can optionally compare against a value
 	* Added: New parameter 'area' for asset file config. If merging is not enabled, you can define one or more areas (string or array) where to load the specific file (no config = all areas)
+	* Added: Paste plugin for tinyMCE
 	* Changed: Don't require system locale data to set a locale for translation
 	* Changed: TodoyuDebug handles now debugging status
 	* Changed: Format of duration (hour)
